<?xml version="1.0" encoding="utf-8" standalone="no"?>
<resources>
    <string name="add">Add</string>
    <string name="delete">Delete</string>
    <string name="app_name">Cash Lens</string>
    <string name="add_expense">Add expense</string>
    <string name="view_expense">View expense</string>
    <string name="select_an_account">Select an account</string>
    <string name="expense_added">Expense added.</string>
    <string name="cant_create_dir">Can\'t create directory\ </string>
    <string name="cant_write_dir">Can\'t write into\ </string>
    <string name="cant_create_file">Can\'t create file\ </string>
    <string name="cant_insert">Can\'t insert new object into database.</string>
    <string name="manage_accounts">Accounts</string>
    <string name="settings">Settings</string>
    <string name="edit_account">Edit account</string>
    <string name="account_added">Account added</string>
    <string name="delete_account">Delete account</string>
    <string name="account_deleted">Account deleted</string>
    <string name="enter_account_name">Please provide a name for the account.</string>
    <string name="are_you_sure">Are you sure ?</string>
    <string name="no_accounts_defined">There are no expense accounts defined.\nPlease define at least one.</string>
    <string name="edit">Edit</string>
    <string name="delete_expense">Delete expense</string>
    <string name="expense_deleted">Expense deleted.</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="edit_expense">Edit expense</string>
    <string name="amount">Amount</string>
    <string name="save">Save</string>
    <string name="discard">Discard</string>
    <string name="account">Account</string>
    <string name="currency">Currency</string>
    <string name="total">Total</string>
    <string name="no_expenses">No expenses.</string>
    <string name="month_start">Month start day</string>
    <string name="name">Name</string>
    <string name="no_filter">No filter</string>
    <string name="current_day">Today</string>
    <string name="current_month">This month</string>
    <string name="custom_interval">Custom interval</string>
    <string name="delete_account_are_you_sure">All expenses belonging to this account will be deleted !\n\nAre you sure ?</string>
    <string name="current_week">This week</string>
    <string name="not_set">\u003Cnot set\u003E</string>
    <string name="fill_amount_before_snapshot">Please enter an amount and select the right account before taking the picture.</string>
    <string name="custom_filter">Custom filter</string>
    <string name="snapshot_params">Snapshot parameters</string>
    <string name="jpeg_quality">JPEG quality</string>
    <string name="picture_size">Picture size</string>
    <string name="expense_views">Expense views</string>
    <string name="month_view">Month view</string>
    <string name="week_view">Week view</string>
    <string name="day_view">Day view</string>
    <string name="configure_custom_filter">Configure custom filter</string>
    <string name="include_accounts">Include accounts</string>
    <string name="all_accounts_included">All accounts are included</string>
    <string name="start_date">Start date</string>
    <string name="end_date">End date</string>
    <string name="select_start_date">Select start date…</string>
    <string name="select_end_date">Select end date…</string>
    <string name="accounts_included">\u0020account(s) are included</string>
    <string name="enable_custom_filter">Enable custom filter</string>
    <string name="user_interface">User interface</string>
    <string name="expense_text_color">Expense text color</string>
    <string name="expense_outline_color">Expense outline color</string>
    <string name="no_image">No image.</string>
    <string name="exchange_rate_service">Exchange rate service</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="fee_percent">Extra fee (%)</string>
    <string name="result">Result</string>
    <string name="use">Use</string>
    <string name="currency_conversion">Currency conversion</string>
    <string name="no_exchange_rates_for_date">The exchange rates are not available for this date.\nPlease select a different one.</string>
    <string name="cant_get_exchange_rates_connect_to_net">Unable to retrieve the exchange rates.\nPlease make sure you are connected to the Internet.</string>
    <string name="currency_not_supported">Currency not supported:\u0020</string>
    <string name="currency_conversion_unavailable">Currency conversion is not available.</string>
</resources>
