<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen 
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:udesign="http://schemas.android.com/apk/res/com.udesign.cashlens" >
    <CheckBoxPreference 
        android:key="expenseFilterCustomEnabled"
        android:title="@string/enable_custom_filter" 
        android:defaultValue="false"
        android:visibility="invisible" />
    <com.udesign.cashlens.ListPreferenceMultiSelect 
        android:title="@string/include_accounts" 
        android:key="customExpenseFilterAccounts" 
        android:summary="@string/all_accounts_included" 
        udesign:separator=","
        android:dependency="expenseFilterCustomEnabled" />
    <CheckBoxPreference 
        android:key="customExpenseFilterStartEnabled" 
        android:title="@string/start_date" 
        android:dependency="expenseFilterCustomEnabled" />
    <com.udesign.cashlens.DatePreference 
        android:key="customExpenseFilterStart" 
        android:title="@string/select_start_date" 
        android:dependency="customExpenseFilterStartEnabled" />
    <CheckBoxPreference 
        android:key="customExpenseFilterEndEnabled" 
        android:title="@string/end_date"
        android:dependency="expenseFilterCustomEnabled" />
    <com.udesign.cashlens.DatePreference 
        android:key="customExpenseFilterEnd" 
        android:title="@string/select_end_date" 
        android:dependency="customExpenseFilterEndEnabled" />
</PreferenceScreen>