<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

	<LinearLayout 
	    android:layout_width="match_parent"
	    android:layout_height="wrap_content"
	    android:orientation="horizontal" >
	    
	    <Button 
	        android:id="@+id/btnSave"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/save" />
	    <Button 
	        android:id="@+id/btnDiscard"
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:layout_weight="1"
	        android:text="@string/discard" />
	    
   	</LinearLayout>
	   
	<ScrollView
	    android:layout_width="match_parent"
	    android:layout_height="match_parent" >
    
		<LinearLayout
		    android:layout_width="match_parent"
		    android:layout_height="wrap_content"
		    android:orientation="vertical" >
		
		    <TextView
		        android:id="@+id/textView3"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/amount"
		        android:textAppearance="?android:attr/textAppearanceLarge" />
		
		    <EditText
		        android:id="@+id/amountTxt"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:inputType="numberDecimal" />

		    <TextView
		        android:id="@+id/textView5"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/account"
		        android:textAppearance="?android:attr/textAppearanceLarge" />

		    <Spinner
		        android:id="@+id/spinAccount"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
		        		   	
		   	<TextView
		        android:id="@+id/textView1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:text="@string/date" />
		
		    <com.udesign.cashlens.DatePickerWithDialog
		        android:id="@+id/datePicker1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
		
		    <TextView
		        android:id="@+id/textView2"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:textAppearance="?android:attr/textAppearanceLarge"
		        android:text="@string/time" />
		
		    <com.udesign.cashlens.TimePickerWithDialog
		        android:id="@+id/timePicker1"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content" />
		
		</LinearLayout>
	</ScrollView>
</LinearLayout>